Correccion pequeños errores, mejora formato. Practica final